# sibs-gateway-python

./: .env.example  .gitignore  404.html  CHANGELOG.md  CONTRIBUTING.md  README.md  ROADMAP.md  SECURITY.md  index.html  mkdocs.yml  objects.inv  pyproject.toml
.github/workflows/: ci.yml  docs.yml  publish.yml
api/: index.html
cards/: index.html
configuration/: index.html
django/: index.html
docs/: api.md  cards.md  configuration.md  django.md  errors.md  fastapi.md  getting-started.md  index.md  internal-notes.md  payments.md  refunds.md  webhooks.md
errors/: index.html
examples/: basic_payment.py  check_status.py  refund_payment.py
examples/django/: settings_example.py  urls.py  views.py
examples/fastapi/: main.py
fastapi/: index.html
getting-started/: index.html
payments/: index.html
pysibs/: __init__.py  _http.py  _payloads.py  _retry.py  _version.py  async_client.py  client.py  config.py  enums.py  exceptions.py  idempotency.py  models.py  money.py  redaction.py  threeds.py  validators.py  webhooks.py
refunds/: index.html
search/: search_index.json
tests/: conftest.py
tests/integration/: test_sandbox_payments.py
tests/unit/: test_card_3ds.py  test_client.py  test_config.py  test_exceptions.py  test_money.py  test_observability.py  test_reliability.py  test_status_mapping.py  test_v02_features.py  test_v04_tokens.py  test_validators.py  test_webhooks.py  test_webhooks_crypto.py
webhooks/: index.html
